Update title to the slide

--- a/_posts/0000-01-02-marcellux26.md
+++ b/_posts/0000-01-02-marcellux26.md
@@ -1,7 +1,6 @@
 ---
 layout: slide
-title: "Welcome to our second slide!"
+title: "Welcome to our marcellhaehnel's slide!"
 ---
 
-This is marcellux26's slide
 Use the left arrow to go back!
